# wooqi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run_wooqi_tests.sh
.github/workflows/: ci.yml  release.yml
.semantic_release/templates/: CHANGELOG.md.j2
testing/: conftest.py  test_functions.py
testing/postfail_feature/actions/: postfail_other_action_same_action.ini
testing/postfail_feature/tests/: postfail_other_test_same_test.ini  postfail_skip_all_test.ini
testing/range_feature/: range_with_2_args.ini  range_with_3_args.ini
tests/unit/: test_config_test.py  test_main.py
wooqi/: __init__.py  __main__.py  plugin.py
wooqi/src/: __init__.py  config_test.py  logger.py  plugin_fixtures.py  pytest_hooks.py  sequencer_features.py
